<resources>
    <string name="app_name">Blablacar Bus</string>
    <string name="failed_bus_stops_retrieved">Echec de récuperation des arrêts de bus.</string>
    <string name="generic_error">Une erreur est survenue, merci de réessayer plus tard.</string>
    <string name="latitude">Latitude : </string>
    <string name="longitude">Longitude : </string>
    <string name="adress">"Adresse : "</string>
    <string name="destinations">"Destinations"</string>
    <string name="stop_bus">Départ</string>
    <string name="stop_bus_label">Arrêt de bus : </string>
    <string name="bus_stop_details">Details de l\'arrêt de bus</string>
    <string name="search_hint">Rechercher un arrêt</string>
    <string name="filter_gps">Filtrer via position</string>
    <string name="dialog_permission_title">Permissions nécessaire</string>
    <string name="dialog_permission_default_message">Nous avons besoin de votre permission pour certaine fonctionalité</string>
    <string name="dialog_permission_button_positive">J\'accepte</string>
    <string name="location_permission_denied">Vous n\'avez pas accepter la permission de géolocalisation</string>
    <string name="retry">Réessayer</string>
    <string name="location_permission_needed">Pour pouvoir trier les arrêts selon votre géolocalisation, nous avons besoin de votre permissions pour accéder à votre emplacement.</string>
    <string name="fares">Coût du trajet</string>
    <string name="cost">Coût :  </string>
    <string name="cost_value">%d %s</string>
    <string name="first_bus">Bus de départ :  </string>
    <string name="id_bus">N° : %d</string>
    <string name="departure">Départ :  </string>
    <string name="arrival">Arrivé :  </string>
    <string name="no_fares">Aucun résultat trouvé pour ce trajet</string>
    <string name="timezone">Fuseaux horaires : </string>
</resources>