<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_id_bus_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/large_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1" />

            <TextView
                android:id="@+id/tv_short_name_bus_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/little_margin"
                app:layout_constraintBottom_toBottomOf="@+id/tv_id_bus_stop"
                app:layout_constraintStart_toEndOf="@+id/tv_id_bus_stop"
                app:layout_constraintTop_toTopOf="@+id/tv_id_bus_stop"
                tools:text="Boulou" />

            <TextView
                android:id="@+id/tv_long_name_bus_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/little_margin"
                app:layout_constraintStart_toStartOf="@+id/tv_short_name_bus_stop"
                app:layout_constraintTop_toBottomOf="@+id/tv_short_name_bus_stop"
                tools:text="Boulou de la case boulou" />

            <TextView
                android:id="@+id/tv_time_zone_bus_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/little_margin"
                app:layout_constraintBottom_toBottomOf="@+id/tv_long_name_bus_stop"
                app:layout_constraintStart_toEndOf="@+id/tv_long_name_bus_stop"
                app:layout_constraintTop_toTopOf="@+id/tv_long_name_bus_stop"
                tools:text="Europe/Paris" />

            <TextView
                android:id="@+id/tv_latitude_label_bus_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/little_margin"
                android:text="@string/latitude"
                app:layout_constraintStart_toStartOf="@+id/tv_long_name_bus_stop"
                app:layout_constraintTop_toBottomOf="@+id/tv_long_name_bus_stop" />

            <TextView
                android:id="@+id/tv_latitude_value_bus_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/little_margin"
                app:layout_constraintBottom_toBottomOf="@+id/tv_latitude_label_bus_stop"
                app:layout_constraintStart_toEndOf="@+id/tv_latitude_label_bus_stop"
                app:layout_constraintTop_toTopOf="@+id/tv_latitude_label_bus_stop"
                tools:text="43.49484" />

            <TextView
                android:id="@+id/tv_longitude_label_bus_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/little_margin"
                android:text="@string/longitude"
                app:layout_constraintStart_toStartOf="@+id/tv_latitude_label_bus_stop"
                app:layout_constraintTop_toBottomOf="@+id/tv_latitude_label_bus_stop" />

            <TextView
                android:id="@+id/tv_longitude_value_bus_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/little_margin"
                app:layout_constraintBottom_toBottomOf="@+id/tv_longitude_label_bus_stop"
                app:layout_constraintStart_toEndOf="@+id/tv_longitude_label_bus_stop"
                app:layout_constraintTop_toTopOf="@+id/tv_longitude_label_bus_stop"
                app:layout_constraintVertical_bias="1.0"
                tools:text="43.49484" />

            <TextView
                android:id="@+id/tv_adress_label_bus_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/little_margin"
                android:text="@string/adress"
                app:layout_constraintStart_toStartOf="@+id/tv_longitude_label_bus_stop"
                app:layout_constraintTop_toBottomOf="@+id/tv_longitude_label_bus_stop" />

            <TextView
                android:id="@+id/tv_adress_value_bus_stop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/little_margin"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_adress_label_bus_stop"
                app:layout_constraintTop_toTopOf="@+id/tv_adress_label_bus_stop"
                app:layout_constraintVertical_bias="1.0"
                tools:text="101 Rue de la voiture " />

            <TextView
                android:id="@+id/tv_destinations_label_bus_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/little_margin"
                android:text="@string/destinations"
                app:layout_constraintStart_toStartOf="@+id/tv_adress_label_bus_stop"
                app:layout_constraintTop_toBottomOf="@+id/tv_adress_value_bus_stop" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_bus_stop_destinations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/little_margin"
                android:layout_marginBottom="?actionBarSize"
                app:layout_constraintStart_toStartOf="@+id/tv_destinations_label_bus_stop"
                app:layout_constraintTop_toBottomOf="@+id/tv_destinations_label_bus_stop"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:listitem="@layout/component_bus_stop_line" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
